--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
@@ -16,7 +16,7 @@
 @*codehint: sm-add*@
 @Scripts.Render("~/bundles/fileupload-single") 
 
-<div id="@clientId" class="fileupload">
+<div id="@clientId" class="fileupload" style="display: inline-block;">
     
     @Html.HiddenFor(x => x, new { @class = "hidden"} )
 
