--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/StoreScopeConfiguration.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/StoreScopeConfiguration.cshtml
@@ -18,16 +18,36 @@
         Selected = 0.Equals(Model.StoreId)
     });
 }
-<div class="multi-store-scope">
-    <div class="selector">
-        <span class="title">@T("Admin.Configuration.Settings.StoreScope")</span>
-        @Html.DropDownList("store-scope-configuration", stores, new { onchange = "setLocation(this.value);" })
-    </div>
+<div class="multi-store-scope well well-small">
+    <table class="adminContent">
+    <tr>
+        <td class="adminTitle">
+			<div class="ctl-label">
+				@T("Admin.Configuration.Settings.StoreScope")
+			</div>
+        </td>
+        <td class="adminData">
+			@Html.DropDownList("store-scope-configuration", stores, new { onchange = "setLocation(this.value);" })
+        </td>
+    </tr>
     @if (Model.StoreId > 0)
-    {
-        <div class="check-all">
-            <input type="checkbox" class="checkbox" onclick="checkAllOverriddenStoreValue(this)">
-            <b>@T("Admin.Configuration.Settings.StoreScope.CheckAll")</b> @T("Admin.Configuration.Settings.StoreScope.CheckAll.Hint")
-        </div>
-    }
+	{
+	<tr>
+		<td>&nbsp;</td>
+		<td>
+			<label class="checkbox">
+				<input type="checkbox" onclick="checkAllOverriddenStoreValue(this)">
+				<span>@T("Admin.Configuration.Settings.StoreScope.CheckAll")</span> 
+				<span class="hint">(@(T("Admin.Configuration.Settings.StoreScope.CheckAll.Hint")))</span>
+			</label>
+		</td>
+	</tr>
+	}
+	</table>
 </div>
+
+<script>
+	$(function () {
+		$('#store-scope-configuration').selectWrapper();
+	});
+</script>
