--- a/src/Plugins/Feed.ElmarShopinfo/Views/FeedElmarShopinfo/Configure.cshtml
+++ b/src/Plugins/Feed.ElmarShopinfo/Views/FeedElmarShopinfo/Configure.cshtml
@@ -99,7 +99,7 @@
     <table class="adminContent">
 	<tr>
 		<td class="adminTitle">
-			@Html.SmartLabelFor(model => model.StoreId):
+			@Html.SmartLabelFor(model => model.StoreId)
 		</td>
 		<td class="adminData">
 			@Html.DropDownListFor(model => model.StoreId, Model.AvailableStores)
