--- a/src/Plugins/Feed.Froogle/Views/FeedFroogle/Configure.cshtml
+++ b/src/Plugins/Feed.Froogle/Views/FeedFroogle/Configure.cshtml
@@ -117,7 +117,7 @@
     </tr>
 	<tr>
 		<td class="adminTitle">
-			@Html.SmartLabelFor(model => model.StoreId):
+			@Html.SmartLabelFor(model => model.StoreId)
 		</td>
 		<td class="adminData">
 			@Html.DropDownListFor(model => model.StoreId, Model.AvailableStores)
