--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.cshtml
@@ -902,19 +902,20 @@
                 @Html.SmartLabelFor(model => model.AvailableStores)
             </td>
             <td class="adminData">
-                @if (Model.AvailableStores != null && Model.AvailableStores.Count > 0)
-                {
-                    foreach (var store in Model.AvailableStores)
-                    {
-                    <div>
-                        <input type="checkbox" name="SelectedStoreIds" value="@store.Id" checked="@(Model.SelectedStoreIds != null && Model.SelectedStoreIds.Contains(store.Id))" />@store.Name
-                    </div>
-                    }
-                }
-                else
-                {
-                    <div>@T("Admin.Configuration.Stores.NoStoresDefined")</div>
-                }</td>
+				@if (Model.AvailableStores != null && Model.AvailableStores.Count > 0)
+				{
+					foreach (var store in Model.AvailableStores)
+					{
+					<label class="checkbox">
+						<input type="checkbox" name="SelectedStoreIds" value="@store.Id" checked="@(Model.SelectedStoreIds != null && Model.SelectedStoreIds.Contains(store.Id))" />
+						<span>@store.Name</span>
+					</label>
+					}
+				}
+				else
+				{
+					<div>@T("Admin.Configuration.Stores.NoStoresDefined")</div>
+				}</td>
         </tr>
     </table>
 }
