Added 'Admin' Link to the header menu (many users just didn't find it in the 'MyAccount' dropdown ;-))

--- a/src/Presentation/SmartStore.Web/Views/Common/AccountDropdown.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/AccountDropdown.cshtml
@@ -26,9 +26,10 @@
         @if (Model.DisplayAdminLink)
         {
             <li>
-                <a href="@Url.Content("~/admin")" target="_blank">
+                <a href="@Url.Content("~/admin")" target="_admin">
                     <i class="icon-cog"></i> 
-                    @T("Account.Administration")</a>
+                    @T("Account.Administration")
+                </a>
             </li>
         }
         
