--- a/src/Plugins/Feed.ElmarShopinfo/Views/FeedElmarShopinfo/Configure.cshtml
+++ b/src/Plugins/Feed.ElmarShopinfo/Views/FeedElmarShopinfo/Configure.cshtml
@@ -44,15 +44,14 @@
     <td class="adminData">
         @for (int i = 0; i <= Model.GeneratedFiles.Count - 1; i++)
 		{
-			var generatedFile = Model.GeneratedFiles[i];
-            @generatedFile.StoreName <text>-</text>
-			<a href="@generatedFile.FileUrl" target="_blank">@generatedFile.FileUrl</a>
-			<a href="@generatedFile.CustomProperties["SecondFileUrl"]" target="_blank">@generatedFile.CustomProperties["SecondFileUrl"]</a>
-			
-			if (i != Model.GeneratedFiles.Count - 1)
-			{
-            <br />
-			}
+			var generatedFile = Model.GeneratedFiles[i];			
+			<p>
+				@(generatedFile.StoreName):
+				<br />
+				<a href="@generatedFile.FileUrl" target="_blank">@generatedFile.FileUrl</a>
+				<br />
+				<a href="@generatedFile.CustomProperties["SecondFileUrl"]" target="_blank">@generatedFile.CustomProperties["SecondFileUrl"]</a>
+			</p>
 		}
     </td>
 </tr>
