Reverted store depending configuration of payment plugins and fixed bugs

--- a/src/Plugins/Payments.Manual/Views/PaymentManual/Configure.cshtml
+++ b/src/Plugins/Payments.Manual/Views/PaymentManual/Configure.cshtml
@@ -3,8 +3,6 @@
 }
 @model SmartStore.Plugin.Payments.Manual.Models.ConfigurationModel
 @using SmartStore.Web.Framework;
-
-@Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 @using (Html.BeginForm())
 {
     <table class="adminContent">
@@ -13,7 +11,6 @@
                 @Html.SmartLabelFor(model => model.TransactMode)
             </td>
             <td class="adminData">
-				@Html.SettingOverrideCheckbox(model => model.TransactMode)
                 @Html.DropDownList("TransactMode", Model.TransactModeValues)
             </td>
         </tr>
@@ -22,7 +19,7 @@
                 @Html.SmartLabelFor(model => model.AdditionalFee)
             </td>
             <td class="adminData">
-                @Html.SettingEditorFor(model => model.AdditionalFee)
+                @Html.EditorFor(model => model.AdditionalFee)
                 @Html.ValidationMessageFor(model => model.AdditionalFee)
             </td>
         </tr>
@@ -31,7 +28,7 @@
                 @Html.SmartLabelFor(model => model.AdditionalFeePercentage)
             </td>
             <td class="adminData">
-                @Html.SettingEditorFor(model => model.AdditionalFeePercentage)
+                @Html.EditorFor(model => model.AdditionalFeePercentage)
                 @Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
             </td>
         </tr>
