--- a/src/Plugins/Payments.Sofortueberweisung/Views/PaymentSofortueberweisung/Configure.cshtml
+++ b/src/Plugins/Payments.Sofortueberweisung/Views/PaymentSofortueberweisung/Configure.cshtml
@@ -8,7 +8,6 @@
 }
 @model ConfigurationModel
 
-@Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 @using (Html.BeginForm()) {
 	<table class="adminContent">
     <tr>
@@ -33,7 +32,7 @@
             @Html.SmartLabelFor(model => model.ApiConfigKey)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.ApiConfigKey)
+            @Html.EditorFor(model => model.ApiConfigKey)
             @Html.ValidationMessageFor(model => model.ApiConfigKey)
         </td>
     </tr>
@@ -42,7 +41,7 @@
             @Html.SmartLabelFor(model => model.AdditionalFee)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.AdditionalFee)
+            @Html.EditorFor(model => model.AdditionalFee)
             @Html.ValidationMessageFor(model => model.AdditionalFee)
         </td>
     </tr>
@@ -51,7 +50,7 @@
             @Html.SmartLabelFor(model => model.AdditionalFeePercentage)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.AdditionalFeePercentage)
+            @Html.EditorFor(model => model.AdditionalFeePercentage)
             @Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
         </td>
     </tr>
@@ -60,7 +59,7 @@
             @Html.SmartLabelFor(model => model.ValidateOrderTotal)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.ValidateOrderTotal)
+            @Html.EditorFor(model => model.ValidateOrderTotal)
             @Html.ValidationMessageFor(model => model.ValidateOrderTotal)
         </td>
     </tr>
@@ -69,7 +68,7 @@
             @Html.SmartLabelFor(model => model.SaveWarnings)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.SaveWarnings)
+            @Html.EditorFor(model => model.SaveWarnings)
             @Html.ValidationMessageFor(model => model.SaveWarnings)
         </td>
     </tr>
@@ -78,7 +77,7 @@
             @Html.SmartLabelFor(model => model.CustomerProtection)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.CustomerProtection)
+            @Html.EditorFor(model => model.CustomerProtection)
             @Html.ValidationMessageFor(model => model.CustomerProtection)
         </td>
     </tr>
@@ -87,7 +86,7 @@
             @Html.SmartLabelFor(model => model.UseTestAccount)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.UseTestAccount)
+            @Html.EditorFor(model => model.UseTestAccount)
             @Html.ValidationMessageFor(model => model.UseTestAccount)
         </td>
     </tr>
@@ -96,7 +95,7 @@
             @Html.SmartLabelFor(model => model.AccountHolder)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.AccountHolder)
+            @Html.EditorFor(model => model.AccountHolder)
             @Html.ValidationMessageFor(model => model.AccountHolder)
         </td>
     </tr>
@@ -105,7 +104,7 @@
             @Html.SmartLabelFor(model => model.AccountNumber)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.AccountNumber)
+            @Html.EditorFor(model => model.AccountNumber)
             @Html.ValidationMessageFor(model => model.AccountNumber)
         </td>
     </tr>
@@ -114,7 +113,7 @@
             @Html.SmartLabelFor(model => model.AccountBankCode)
         </td>
         <td class="adminData">
-            @Html.SettingEditorFor(model => model.AccountBankCode)
+            @Html.EditorFor(model => model.AccountBankCode)
             @Html.ValidationMessageFor(model => model.AccountBankCode)
         </td>
     </tr>
@@ -123,7 +122,6 @@
             @Html.SmartLabelFor(model => model.AccountCountry)
         </td>
         <td class="adminData">
-			@Html.SettingOverrideCheckbox(model => model.AccountCountry)
 			@Html.DropDownList("AccountCountry", new List<SelectListItem> {
 				new SelectListItem { Selected = true, Text = @T("Plugins.Payments.Sofortueberweisung.Germany"), Value = "DE" }
 			})
