--- a/src/Plugins/Payments.PayInStore/Views/PaymentPayInStore/Configure.cshtml
+++ b/src/Plugins/Payments.PayInStore/Views/PaymentPayInStore/Configure.cshtml
@@ -3,7 +3,6 @@
 }
 @model SmartStore.Plugin.Payments.PayInStore.Models.ConfigurationModel
 @using SmartStore.Web.Framework;
-@Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 @using (Html.BeginForm())
 {
     <table class="adminContent">
@@ -12,7 +11,6 @@
                 @Html.SmartLabelFor(model => model.DescriptionText)
             </td>
             <td class="adminData">
-				@Html.SettingOverrideCheckbox(model => model.DescriptionText)
                 @Html.TextAreaFor(model => Model.DescriptionText, new { style = "Width: 550px; Height: 350px;" })
                 @Html.ValidationMessageFor(model => model.DescriptionText)
             </td>
@@ -22,7 +20,7 @@
                 @Html.SmartLabelFor(model => model.AdditionalFee)
             </td>
             <td class="adminData">
-                @Html.SettingEditorFor(model => model.AdditionalFee)
+                @Html.EditorFor(model => model.AdditionalFee)
                 @Html.ValidationMessageFor(model => model.AdditionalFee)
             </td>
         </tr>
@@ -31,7 +29,7 @@
                 @Html.SmartLabelFor(model => model.AdditionalFeePercentage)
             </td>
             <td class="adminData">
-                @Html.SettingEditorFor(model => model.AdditionalFeePercentage)
+                @Html.EditorFor(model => model.AdditionalFeePercentage)
                 @Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
             </td>
         </tr>
