ContentSlider: don't display nav arrows when slides count is less than 2

--- a/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
@@ -29,12 +29,17 @@
 {
 
     <div id="slider" class="slider" style="height: @(Model.ContentSliderHeight); @(GetSliderBgExpression())">
-        <nav class="arrows">
-            <span class="sequence-prev"></span>
-            <span class="sequence-next"></span>
-        </nav>
+        
+        @if (Model.Slides.Count > 1)
+        {
+            <nav class="arrows">
+                <span class="sequence-prev"></span>
+                <span class="sequence-next"></span>
+            </nav>
+        }
 
-        @if (Model.AutoPlay) {
+        @if (Model.AutoPlay && Model.Slides.Count > 1)
+        {
             <div class="sequence-pause"></div>
         }
 
