ContentSlider: hide slider completely when no slide is defined

--- a/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
@@ -18,14 +18,16 @@
 }
 
 @{
-    if (Model.IsActive) 
+    var isActive = Model.IsActive && Model.Slides.Count > 0;
+
+    if (isActive) 
     {
         Html.AddCssFileParts(Url.ThemeAwareContent("Content/slider.less"));
         Html.AddScriptParts("~/bundles/slider");
     }
 }
 
-@if(Model.IsActive) 
+@if (isActive) 
 {
 
     <div id="slider" class="slider" style="height: @(Model.ContentSliderHeight); @(GetSliderBgExpression())">
