--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBox.cshtml
@@ -47,9 +47,19 @@
     <a href="@Url.RouteUrl("Product", new { SeName = Model.SeName })" title="@Model.DefaultPictureModel.Title">
         <img alt="@Model.DefaultPictureModel.AlternateText" src="@Model.DefaultPictureModel.ImageUrl" title="@Model.DefaultPictureModel.Title" />
     </a>
+    @if (Model.ColorAttributes.Any())
+    {
+        <div class="colors">
+            @foreach (var clr in Model.ColorAttributes)
+            {
+                <span style="background-color: @clr.Color" title="@clr.FriendlyName"></span>
+            }
+        </div>
+    }
 </figure>
 <div class="data">
-    @{
+
+    @if (Model.ShowReviews) {
         int ratingPercent = 0;
         if (Model.TotalReviews != 0)
         {
@@ -57,18 +67,15 @@
         }
 
         string reviewTitle = "";
-        if (Model.TotalReviews > 0) 
+        if (Model.TotalReviews > 0)
         {
             reviewTitle = Model.TotalReviews + (Model.TotalReviews == 1 ? T("Reviews.Overview.Review") : T("Reviews.Overview.Reviews"));
         }
-    }
-
-    @if (Model.ShowReviews) {
-    <div class="reviews" title="@reviewTitle">
-        <div class="rating">
-            <div style="width: @(ratingPercent)%"></div>
+        <div class="reviews" title="@reviewTitle">
+            <div class="rating">
+                <div style="width: @(ratingPercent)%"></div>
+            </div>
         </div>
-    </div>
     }
 
     @{
