--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -342,6 +342,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowColorSquaresInLists)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.ShowColorSquaresInLists)
+                @Html.ValidationMessageFor(model => model.ShowColorSquaresInLists)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.DefaultPageSizeOptions)
             </td>
             <td class="adminData">
