--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -862,7 +862,8 @@ form.form-search {
     a { 
         display: inline-block; 
         position: relative;
-        z-index: 0; }
+        z-index: 0; 
+    }
 }
 
 .item-box figure.picture .colors {
