Moved scripting for setting overrides to admin namespace

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/StoreScopeConfiguration.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/StoreScopeConfiguration.cshtml
@@ -36,7 +36,7 @@
 		<td>&nbsp;</td>
 		<td>
 			<label class="checkbox">
-				<input type="checkbox" onclick="checkAllOverriddenStoreValue(this)">
+				<input type="checkbox" onclick="Admin.checkAllOverriddenStoreValue(this)">
 				<span>@T("Admin.Configuration.Settings.StoreScope.CheckAll")</span> 
 				<span class="hint">(@(T("Admin.Configuration.Settings.StoreScope.CheckAll.Hint")))</span>
 			</label>
