Added properties for HtmlHelper and Model to 'AdminTabStripCreated' event type. This way external admin UI customization becomes easier and more flexible.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Blog/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Blog/_CreateOrUpdate.cshtml
@@ -9,7 +9,7 @@
     x.Add().Text(T("Admin.Common.SEO").Text).Content(TabSeo().ToHtmlString());
 
     //generate an event
-    EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "category-edit"));
+    EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "category-edit", this.Html, this.Model));
 })
 
 @helper TabInfo()
