--- a/src/Presentation/SmartStore.Web/Administration/Views/ProductVariant/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ProductVariant/_CreateOrUpdate.cshtml
@@ -20,7 +20,7 @@
 	x.Add().Text(T("Admin.Catalog.Products.Variants.Discounts").Text).Content(TabDiscounts());
 
 	//generate an event
-	EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "productvariant-edit"));
+    EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "productvariant-edit", this.Html, this.Model));
 })
 @helper TabInfo() {
     @Html.Partial("_ProductVariantInfo", Model, new ViewDataDictionary())
